# tree-sitter-mcfunction

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json  update.sh
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mcfunction/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterMcfunctionTests/: TreeSitterMcfunctionTests.swift
data/: command_keywords.js  execute_subcommands.js  generic_commands.js
grammar/: 01_keywords.js  01_primitive.js  02_complex.js  02_primitive.js  03_complex.js  03_composite.js  03_statements.js  04_statements.js  99_all.js  complex_types.js  datatypes.js  keywords.js  primitive_types.js  selectors.js  snbt.js  statements.js  symbols.js  top_level.js
queries/mcfunction/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: 01_primitive_types.txt  02_complex_types.txt  03_keywords.txt  04_statements.txt  arguments.txt  datatypes.txt  statements.txt
