[package]
name = "tree-sitter-mcfunction"
description = "Tree-sitter for the latest version of Minecraft mcfunction syntax"
version = "0.1.0"
authors = ["BubbleFish <daforsastudia@gmail.com>"]
license = "ISC"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mcfunction"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/bbfh-dev/tree-sitter-mcfunction"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
